--- a/less/social/basic/typography.less
+++ b/less/social/basic/typography.less
@@ -81,7 +81,7 @@ h1 {font-size: 35px; line-height: 40px; small {font-size: 25;}}
 h2 {font-size: 28px; line-height: 40px; small {font-size: 20;}}
 h3 {font-size: 23px; line-height: 40px; small {font-size: 13;}}
 h4 {font-size: 18px; line-height: 20px;}
-h5 {font-size: 12px; line-height: 20px;}
+h5 {font-size: 14px; line-height: 20px;}
 h6 {font-size: 10px; line-height: 20px;}
 
 // Hyperlinks
