--- a/less/social/views/messages.less
+++ b/less/social/views/messages.less
@@ -38,6 +38,9 @@
 				&:first-child {
 					margin-top: 10px;
 				}
+				&.active {
+					background-color: rgba(105,228,0,0.2);			
+				}
 			}
 			#newMessage {
 				padding: 10px;
