--- a/less/social/views/register.less
+++ b/less/social/views/register.less
@@ -37,4 +37,8 @@
 	#callRegister, #callLogin {
 		display: none;
 	}
+	footer {
+		position: absolute;
+		bottom: 10px;
+	}
 }
